--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,6 @@
 PORT=8081
-MONGODB_CNN=mongodb+srv://user_node_cafe:tJPLFNxdhFZ1eTGt@miclustercafe.yrxaj.mongodb.net/CafeDB
-SECRETORPRIVATEKEY=Est03sMyPub1ck3y23@1717
+MONGODB_CNN=
+SECRETORPRIVATEKEY=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET_ID=
